fixed up the visibilty toggle

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ footer{
     background-color: #cfb997;
     color: #f0e7db;
     text-align: center;
-    font-size: 4vh;
+    font-size: 36px;
     cursor: pointer;
 }
 
@@ -52,7 +52,7 @@ footer{
     background-color: #cfb997;
     color: #f0e7db;
     text-align: center;
-    font-size: 4vh;
+    font-size: 36px;
     -webkit-box-shadow: 3px 5px 37px -6px rgba(0,0,0,0.75);
     -moz-box-shadow: 3px 5px 37px -6px rgba(0,0,0,0.75);
     box-shadow: 3px 5px 37px -6px rgba(0,0,0,0.75);
@@ -61,23 +61,10 @@ footer{
 
 .output{
     background-color: #f0e7db;
-    color: #cfb997;
     width: 40%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;  
-}
-
-.green-border{
-    transition: 0.1s;
-    background-color: #f0e7db;
-    color: #cfb997;
-    width: 40%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column; 
-    border: 2px solid green;
-    border-radius: 10px;
 }
 
 .output-container{
@@ -89,6 +76,7 @@ footer{
     transition: ease-in 0.5;
     width: 27%;
     float: left;
+    color: #cfb997;
 }
 
 .output-output{
@@ -97,6 +85,7 @@ footer{
 }
 
 .add-button{
+    display: block;
     transition: 0.2s ease;
     margin:2vh auto;
     height: 85px;
@@ -127,7 +116,12 @@ footer{
     padding: 21px 0;
 }
 
-.add-container{
+#add-container-visibility-toggle-wrapper {
+    display: none;
+    margin-top: 40px;
+}
+
+#add-container{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -139,6 +133,37 @@ input{
     height: 30px;
     width: 30%;
     margin: 4px auto;
+}
+
+.add-container-button{
+    transition: 0.2s ease;
+    width: 13vw;
+    margin: 1vh 2vw;
+    padding: 1vh 1vw;
+    background-color: #cfb997;
+    color: #f0e7db;
+    font-family: 'Quicksand', sans-serif;
+    font-size: larger;
+    border-radius: 10px;
+    border: 0;
+    cursor: pointer;
+}
+
+.add-container-button-pressed{
+    transition: 0.2s ease;
+    width: 13vw;
+    margin: 1vh 2vw;
+    padding: 1vh 1vw;
+    background-color: #cfb997;
+    color: #f0e7db;
+    font-family: 'Quicksand', sans-serif;
+    font-size: larger;
+    border-radius: 10px;
+    border: 0;
+    -webkit-box-shadow: 3px 5px 37px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 5px 37px -6px rgba(0,0,0,0.75);
+    box-shadow: 3px 5px 37px -6px rgba(0,0,0,0.75);
+    cursor: pointer;
 }
 
 
